@@ -1,5 +1,7 @@
 *SVN*
 
+* Added DateHelper#select_time and DateHelper#select_second #373 [Scott Baron]
+
 * Added class declaration for the MissingFile exception #388 [Kent Sibilev]
 
 * Added "short hypertext note with a hyperlink to the new URI(s)" to redirects to fulfill compliance with RFC 2616 (HTTP/1.1) section 10.3.3 #397 [Tim Bates]
